# steam_market_parser

./: .gitignore  Cargo.toml  steam_items.db  steam_items.db-journal
backend/: .gitignore  Cargo.toml
backend/front/: main_page.css  main_page.html  store_list.html
backend/front/components/: ad_form.html  main_head_panel.html  main_media_panel.html  profile_store_queue.html  store.html
backend/front/css/: main_head_panel.css  main_side_panel.css  profile_settings.css  store_menu.css
backend/front/js/: main_side_filters.js  main_websocket_handler.js  profile_ad_user_inventory.js  profile_settings.js
backend/front/transaction/: success.html  transaction.css
backend/src/: background_tasks.rs  db.rs  lib.rs  main.rs  routes.rs  steam_login.rs  steam_request.rs  store_chat_websocket.rs  websocket.rs
backend/src/payments/: mod.rs
backend/src/payments/stripe/: payment.rs
extention/: background.js  content.js  manifest.json  page_bridge.js
front/: index.html  main.html  main.js  main_page.css  main_page.html  store_rating.css  theme.css
front/components/: ad_form.html  card_info.html  feed_items.html  head_panel.html  main_media_panel.html  main_side_panel.html  media_panel.html  profile_settings.html  profile_store_queue.html  settings_form.html  side_panel.html  store.html  store_menu.html  user_store.html
front/css/: ad_form.css  card_info.css  feed_items.css  head_panel.css  loader.css  main_media_panel.css  main_side_panel.css  media_panel.css  profile_settings.css  profile_store_queue.css  settings_form.css  side_panel.css  store.css  store_menu.css  theme.css  user_store.css
front/js/: add_ad.js  head_panel.js  load_inventory.js  main_head_panel.js  main_media_panel.js  main_side_filters.js  main_websocket_handler.js  media_panel.js  misc_shared_fns.js  offer_list.js  profile_settings.js  profile_store_queue.js  shared_fns.js  side_filters.js  sticky_tooltip.js  store.js  store_menu.js  store_websocket.js  troopack_widget.js  user_inventory.js  user_store.js  websocket_handler.js
front/js/payments/: bitcoin.js  stripe.js
front/transaction/: cancel.html  success.html  transaction.css  transaction.js
frontend/: .gitignore  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: global.css  layout.tsx  page.tsx
frontend/components/: advertise-popup.tsx  chat-fab.tsx  feed-card.tsx  item-card.tsx  marketplace-header.tsx  marketplace-sidebar.tsx  notification-popup.tsx  profile-dropdown.tsx  profile-settings-popup.tsx  scroll-controls.tsx  store-modal.tsx  store-preview-popup.tsx
frontend/components/ui/: badge.tsx  button.tsx  calendar.tsx  chart.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  form.tsx  menubar.tsx  scroll-area.tsx  select.tsx  sheet.tsx  sidebar.tsx
frontend/hooks/: useStoreChat.ts  userAuth.ts
frontend/lib/: getInventoryGames.ts  storeChat.ts
frontend/types/: feed.ts
src/: background_tasks.rs  db.rs  lib.rs  main.rs  routes.rs  steam_login.rs  steam_request.rs  store_chat_websocket.rs  websocket.rs
src/payments/: mod.rs
src/payments/bitcoin/: payment.rs
(+1 files in other folders)
