[package]
name = "steam_market_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.8"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
futures-util = "0.3.31"
reqwest = "0.12.24"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.145"
steam-openid = "0.2.0"
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
dotenv = "0.15"

[lints.clippy]
pedantic = {level = "warn", priority = 1}
allow_attributes = "deny"
allow_attributes_without_reason = "deny"

# robust code
todo = "deny"
unreachable = "deny"
unimplemented = "deny"
unwrap_used = "deny"
indexing_slicing = "deny"
dbg_macro = "deny"
expect_used = "deny"
arithmetic_side_effects = "deny"
exit = "deny"
string_slice = "deny"
undocumented_unsafe_blocks = "deny"
missing_docs_in_private_items = "warn"
panic = { level = "deny", priority = 0 }

# niche stuff
assertions_on_result_states = "warn"
cargo_common_metadata = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "deny"
empty_enum_variants_with_brackets = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
missing_assert_message = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
negative_feature_names = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
redundant_test_prefix = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "deny"
shadow_unrelated = "warn"
single_char_lifetime_names = "warn"
str_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "deny"
try_err = "warn"
unneeded_field_pattern = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "deny"
min_ident_chars = "warn"
