[package]
name = "steam_market_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
actix = "0.13.5"
actix-files = "0.6.8"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "gzip"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = "1.0.228"
serde_json = "1.0.145"
steam-openid = "0.2.0"
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
dotenv = "0.15"
uuid = { version = "1.20.0", features = ["v4"] }
chrono = "0.4.43"
stripe = { package = "async-stripe", version = "0.35", features = ["runtime-tokio-hyper"] }
urlencoding = "2.1.3"
